syntax = "proto3";
package access;

option go_package = "github.com/grafana/grafana/pkg/storage/secret/access";

message SecretRequest {
  string namespace = 1;

  // A list of the names we want decoded
  repeated string names = 2;
}

message SecretResponse {
  // The value will be empty if the user can not read it
  // This could be that it exists but the request does not have permissions
  // OR that the values does not exist.  
  // We avoid 404 so you can not scan for valid values
  map<string,string> values = 1;
}

service SecretDecoder {
  // Upload a blob that will be saved in a resource
  rpc GetSecretValues(SecretRequest) returns (SecretResponse);
}
